--- a/RPIControllerEmulator_Server/RPIControllerEmulator_Server.csproj
+++ b/RPIControllerEmulator_Server/RPIControllerEmulator_Server.csproj
@@ -68,10 +68,10 @@
     </ApplicationDefinition>
     <Compile Include="src\NetworkLinkAdapter.cs" />
     <Compile Include="src\Sender.cs" />
-    <Compile Include="VirtualKeyboard.xaml.cs">
+    <Compile Include="View\Windows\VirtualKeyboard.xaml.cs">
       <DependentUpon>VirtualKeyboard.xaml</DependentUpon>
     </Compile>
-    <Page Include="MainWindow.xaml">
+    <Page Include="View\Windows\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -79,21 +79,21 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="View\Windows\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="NetworkConfigurationWindow.xaml">
+    <Page Include="View\Windows\NetworkConfigurationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="VirtualKeyboard.xaml">
+    <Page Include="View\Windows\VirtualKeyboard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NetworkConfigurationWindow.xaml.cs">
+    <Compile Include="View\Windows\NetworkConfigurationWindow.xaml.cs">
       <DependentUpon>NetworkConfigurationWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -120,6 +120,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="ViewModel\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
