--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/ViewModel/ViewModel.csproj
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/ViewModel/ViewModel.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{C7F10921-3BD2-41D8-B35A-A09949037F9F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SystemForIndirectUseOfInputDevices.DesktopApplication.ViewModel</RootNamespace>
+    <RootNamespace>ViewModel</RootNamespace>
     <AssemblyName>SystemForIndirectUseOfInputDevices.DesktopApplication.ViewModel</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainPageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -52,6 +53,9 @@
       <Project>{38f4b4f4-e759-4c6c-8fed-2a924d30741a}</Project>
       <Name>Services</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
