--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/ViewModel/ViewModel.csproj
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/ViewModel/ViewModel.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="RawInput.Sharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
