--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/View.csproj
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/View/View.csproj
@@ -70,6 +70,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Pages\Connections\Network.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -84,6 +88,9 @@
     </Compile>
     <Compile Include="Controls\DeviceList.xaml.cs">
       <DependentUpon>DeviceList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Connections\Network.xaml.cs">
+      <DependentUpon>Network.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
