--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/Model/Model.csproj
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/Model/Model.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connectors\Connector.cs" />
+    <Compile Include="Connectors\NetworkConnector.cs" />
     <Compile Include="DeviceModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
