--- a/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/Services/Services.csproj
+++ b/Diplomski V2.1/SystemForIndirectUseOfInputDevices/DesktopApplication/Services/Services.csproj
@@ -185,6 +185,7 @@
     <Compile Include="DeviceHandlers\MouseHandler.cs" />
     <Compile Include="Devices.cs" />
     <Compile Include="DeviceHandlers\KeyboardHandler.cs" />
+    <Compile Include="MessageGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawInput\RawInputEventArgs.cs" />
     <Compile Include="RawInput\RawInputReceiverWindow.cs" />
