--- a/Diplomski V2.1/ControllerDriverRPI/ControllerDriverRPI.vcxproj.filters
+++ b/Diplomski V2.1/ControllerDriverRPI/ControllerDriverRPI.vcxproj.filters
@@ -14,6 +14,9 @@
     <ClCompile Include="inputDevice.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="Joystick.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -34,6 +37,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="inputDevice.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="Joystick.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
